removed file mime type from upload table, ensured no overlap with truncating filename

--- a/src/main/webapp/app/resources/styles/sass/directives/_field-profile.scss
+++ b/src/main/webapp/app/resources/styles/sass/directives/_field-profile.scss
@@ -50,8 +50,12 @@
     width: 20ch;
 }
 
-.field-profile .file-info .file-name{
+.field-profile .file-info .file-name {
   font-weight: bold;
+}
+
+.file-size {
+  white-space: nowrap;
 }
 
 .file-preview-container {
